--- a/views/section/source-view.html
+++ b/views/section/source-view.html
@@ -5,6 +5,8 @@
         <h1>
           <svg class="section-icon"><use xlink:href="assets/img/icons.svg#icon-system"></use></svg>
           <span id="source-filename"></span>
+          <button id="reload-source" type="button">새로고침</button>
+          <button id="copy-source" type="button">소스복사</button>
         </h1>
       </div>
     </header>
