--- a/views/section/source-view.html
+++ b/views/section/source-view.html
@@ -7,6 +7,7 @@
           <span id="source-filename"></span>
           <button id="reload-source" type="button">새로고침</button>
           <button id="copy-source" type="button">소스복사</button>
+          <button id="copy-source-with-description" type="button">소스복사(설명포함)</button>
         </h1>
       </div>
     </header>
@@ -15,7 +16,7 @@
 
     <script type="text/javascript">
       require('./renderer-process/source-view')
-      
+
     </script>
 
   </section>
