--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -59,6 +59,13 @@
   font-size: 11px;
   font-weight: normal;
   text-transform: uppercase;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.nav-category.is-shown {
+  visibility: visible;
+  opacity: 1;
 }
 
 .nav-button {
